# common

./: .gitmodules  CMakeLists.txt  build.zig  build.zig.zon
common/: CMakeLists.txt  Handle.hpp  Processor.hpp  Prop.cpp  Time.hpp  Unicode.cpp  Unicode.hpp
common/array/: CSimpleSortedArray.hpp
common/datastore/: CDataStore.cpp  CDataStoreCache.hpp
common/mempool/: MemChunk.cpp
common/objectalloc/: CObjectHeap.cpp
common/processor/: Processor.cpp  Processor.hpp
common/processor/linux/: Processor.cpp
common/processor/mac/: Processor.cpp
common/processor/win/: Processor.cpp
common/string/: CStringManager.cpp  CStringMemory.cpp
common/time/: Time.hpp
common/time/linux/: Time.cpp
common/time/mac/: Time.cpp
common/time/win/: Time.cpp  TimeManager.cpp  TimeManager.hpp
lib/: CMakeLists.txt
